--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <title>RMIT Code Playground</title>
-    <link rel="stylesheet" href="/assets/reset.css" />
+    <link rel="stylesheet" href="/default/reset.css" />
     <link rel="stylesheet" href="/styles.css" />
   </head>
   
   <body>
-    <h1>Hello World!</h1>
+    <header>
+    </header>
   </body>
   
   <script src="/script.js" defer></script>
