🏚🌄 Checkpoint ./index.html:69468852/5281 ./styles.css:69468852/521

--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
   
   <body>
     <header>
+      <nav>
+        <ol>
+          <li><a href="#task-1">Hover states</a></li>
+          <li><a href="#task-2">Custom cursors</a></li>
+          <li><a href="#task-3">CSS transforms (rotate, filter effects, scale)</a></li>
+          <li><a href="#task-4">Updating classes with Javascript</a></li>
+          <li><a href="#task-5">Keyframe animations</a></li>
+          <li><a href="#task-6">Draggable elements</a></li>
+        </ol>
+      </nav>
     </header>
+    <main>
+      <section id="task-1"></section>
+      <section id="task-2"></section>
+      <section id="task-3"></section>
+      <section id="task-4"></section>
+      <section id="task-5"></section>
+      <section id="task-6"></section>
+    </main>
   </body>
   
   <script src="/script.js" defer></script>
