--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <li><a href="#task-4">Updating classes with Javascript</a></li>
           <li><a href="#task-5">Keyframe animations</a></li>
           <li><a href="#task-6">Draggable elements</a></li>
+          <li><a href="#task-7">Media queries</a></li>
         </ol>
       </nav>
     </header>
@@ -27,6 +28,7 @@
       <section id="task-4"></section>
       <section id="task-5"></section>
       <section id="task-6"></section>
+      <section id="task-7"></section>
     </main>
   </body>
   
