--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ol>
           <li><a href="#task-1">Hover states</a></li>
           <li><a href="#task-2">Custom cursors</a></li>
-          <li><a href="#task-3">CSS transforms (rotate, filter effects, scale)</a></li>
+          <li><a href="#task-3">CSS transforms</a></li>
           <li><a href="#task-4">Updating classes with Javascript</a></li>
           <li><a href="#task-5">Keyframe animations</a></li>
           <li><a href="#task-6">Draggable elements</a></li>
