🍼🚶 Checkpoint ./README.md:69468852/3 ./index.html:69468852/723

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <header>
       <nav>
         <ol>
-          <li><a href="#task-1">Hover states</a></li>
-          <li><a href="#task-2">Custom cursors</a></li>
-          <li><a href="#task-3">CSS transforms</a></li>
-          <li><a href="#task-4">Updating classes with Javascript</a></li>
-          <li><a href="#task-5">Keyframe animations</a></li>
-          <li><a href="#task-6">Draggable elements</a></li>
-          <li><a href="#task-7">Media queries</a></li>
+          <li><a href="#trick-1">Hover states</a></li>
+          <li><a href="#trick-2">???</a></li>
+          <li><a href="#trick-3">CSS transforms</a></li>
+          <li><a href="#trick-4">Updating classes with Javascript</a></li>
+          <li><a href="#trick-5">Keyframe animations</a></li>
+          <li><a href="#trick-6">Custom cursors</a></li>          
+          <li><a href="#trick-7">Draggable elements</a></li>
+          <li><a href="#trick-8">Media queries</a></li>
         </ol>
       </nav>
     </header>
@@ -31,6 +32,6 @@
       <section id="task-7"></section>
     </main>
   </body>
-  
-  <script src="/script.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
+  <script src="/script.js"></script>
 </html>
