🐓🍜 Checkpoint ./index.html:69468852/1510 ./styles.css:69468852/467

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <ol>
           <li><a href="#trick-1">Hover states</a></li>
-          <li><a href="#trick-2">???</a></li>
+          <li><a href="#trick-2">Insert image/video</a></li>
           <li><a href="#trick-3">CSS transforms</a></li>
           <li><a href="#trick-4">Updating classes with Javascript</a></li>
           <li><a href="#trick-5">Keyframe animations</a></li>
@@ -35,16 +35,42 @@
       </section>
       <section id="trick-3">
         <div class="container">
-          <div>
-            
+          <div class="box"></div>
+        </div>
+      </section>
+      <section id="trick-4">
+        <div class="container">
+          <div class="box">
+            <p>Round corners after timeout</p>
           </div>
         </div>
       </section>
-      <section id="trick-4"></section>
-      <section id="trick-5"></section>
-      <section id="trick-6"></section>
-      <section id="trick-7"></section>
-      <section id="trick-8"></section>
+      <section id="trick-5">
+        <div class="container">
+          <div class="box">
+            <p>Click to change colour</p>
+          </div>
+        </div>
+      </section>
+      <section id="trick-6">
+        <div class="container">
+          <div class="box">
+            <p>Hover over me</p>
+          </div>
+        </div>
+      </section>
+      <section id="trick-7">
+        <div class="container">
+          <div class="box">
+            <p>Drag me</p>
+          </div>
+        </div>
+      </section>
+      <section id="trick-8">
+        <div class="container">
+          <code>@media (max-width: 888px) { /* insert style */ }</code>
+        </div>
+      </section>
     </main>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
