👼😼 Checkpoint ./styles.css:69468852/29 ./script.js:69468852/3191 ./default/custom.css:69468852/139 ./index.html:69468852/43

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   
   <body>
     <header>
+      <div>
+        Something
+      </div>
       <nav>
         <ol>
           <li><a href="#trick-1">Hover states</a></li>
