🏰🌾 Checkpoint ./default/custom.css:69468852/3309 ./index.html:69468852/106

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   
   <body>
     <header>
-      <div>
-        Something
+      <div class="site-title">
+        <a href="#">RMIT Code Playground</a>
       </div>
       <nav>
         <ol>
