🚀💠 Checkpoint ./index.html:69468852/621 ./script.js:69468852/1902 ./example/index.html:69468852/13

--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+  
+  <!--   this is just the meta and site data you can ignore this section -->
   <head>
-    <title>RMIT Code Playground</title>
+    
+    <!--     title tag will show in your browser tab -->
+    <title>Code Playground</title>
+    
+    <!--     style sheets which link to your css files -->
     <link rel="stylesheet" href="/default/reset.css" />
     <link rel="stylesheet" href="/default/default.css" />
     <link rel="stylesheet" href="/styles.css" />
   </head>
   
+  <!--   your code starts here -->
   <body>
     <header>
       <div class="site-title">
-        <a href="#">RMIT Code Playground</a>
+        <a href="#">Code Playground</a>
       </div>
       <nav>
         <ul>
@@ -26,6 +33,8 @@
       </section>
     </main>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
+  
+  <!--   link to script file -->
   <script src="/script.js"></script>
+  
 </html>
