--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>RMIT Code Playground</title>
     <link rel="stylesheet" href="/default/reset.css" />
-    <link rel="stylesheet" href="/default/custom.css" />
+    <link rel="stylesheet" href="/default/default.css" />
     <link rel="stylesheet" href="/styles.css" />
   </head>
   
