--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Code Playground</title>
     
     <!-- links to your css files -->
-    <link rel="stylesheet" href="/default/reset.css" />
     <link rel="stylesheet" href="/default/default.css" />
     <link rel="stylesheet" href="/styles.css" />
   </head>
@@ -15,6 +14,12 @@
     <header>
       <div class="site-title">
         <a href="#">Code Playground</a>
+      </div>
+      
+      <div class="message">
+        <p>
+          Try the simple tricks 
+        </p>
       </div>
 
       <nav>
@@ -36,5 +41,4 @@
   
   <!-- link to script file -->
   <script src="/script.js"></script>
-  
 </html>
