🏮🔔 Checkpoint ./index.html:69468852/316 ./default/default.css:69468852/61 ./styles.css:69468852/90 ./example/index.html:69468852/39

--- a/examples/index.html
+++ b/examples/index.html
@@ -12,8 +12,8 @@
   <!-- code playground starts here -->
   <body>
     <header>
-      <div class="site-title">
-        <button class="back">Code Playground</button>
+      <div class="title">
+        <a href="/">Code Playground</a>
       </div>
 
       <nav>
