--- a/index.html
+++ b/index.html
@@ -12,19 +12,17 @@
   <!-- code playground starts here -->
   <body>
     <header>
-      <div class="site-title">
+      <div class="title">
         <a href="#">Code Playground</a>
       </div>
       
       <div class="message">
-        <p>
-          Try the simple tricks 
-        </p>
+        <p>Try out some simple tricks from the presentation. Don't be afraid to break the code.</p>
       </div>
 
       <nav>
         <ul>
-          <li><a href="example">Examples</a></li>
+          <li><a href="examples">Examples</a></li>
         </ul>
       </nav>
     </header>
