🔑🍥 Checkpoint ./examples/index.html:69468852/365 ./default/changeColour.js:69468852/638 ./default/default.css:69468852/1337

--- a/examples/index.html
+++ b/examples/index.html
@@ -34,7 +34,9 @@
     <main>
       <section id="exercise-1">
         <div class="container">
-          <
+          <div class="box">
+            <p>Hover states</p>
+          </div>
         </div>
       </section>
       <section id="exercise-2">
@@ -58,7 +60,7 @@
       </section>
       <section id="exercise-5">
         <div class="container">
-          <div class="box">
+          <div class="box" id="colourButton">
             <p>Click to change colour</p>
           </div>
         </div>
@@ -79,12 +81,15 @@
       </section>
       <section id="exercise-8">
         <div class="container">
-          <code>@media (max-width: 888px) { /* insert style */ }</code>
+          <div class="box">
+            <code>@media (max-width: 888px) { /* insert style */ }</code>
+          </div>
         </div>
       </section>
     </main>
   </body>
   
   <!-- link to script file -->
+  <script src="/default/colour.js"></script>
   <script src="/script.js"></script>
 </html>
