🌵🌜 Checkpoint ./default/default.css:69468852/904 ./examples/index.html:69468852/96

--- a/examples/index.html
+++ b/examples/index.html
@@ -34,14 +34,14 @@
     <main>
       <section id="exercise-1">
         <div class="container">
-          <div class="box">
+          <div class="box fast">
             <p>Hover state</p>
           </div>
         </div>
       </section>
       <section id="exercise-2">
         <div class="container">
-          <div class="box">
+          <div class="box fast">
             <p>Transform</p>
             <p>Filter — blur</p>
           </div>
