🏍💑 Checkpoint ./default/default.css:69468852/284 ./styles.css:69468852/12 ./index.html:69468852/80 ./examples/index.html:69468852/394

--- a/examples/index.html
+++ b/examples/index.html
@@ -15,6 +15,10 @@
       <div class="title">
         <a href="/">Code Playground</a>
       </div>
+      
+      <div class="message">
+        <a href="https://www.google.com/" target="_blank">Simple tricks</a>
+      </div>
 
       <nav>
         <ul>
