--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <body>
     <header>
       <div class="title">
-        <a href="#">Code Playground</a>
+        <a href="/">Code Playground</a>
       </div>
       
       <div class="message">
-        <p>Try out some simple tricks from the presentation. Don't be afraid to break the code.</p>
+        <p>Try out some simple tricks from the <a href="https://www.google.com/" target="_blank">presentation</a>. Don't be afraid to break the code.</p>
       </div>
 
       <nav>
