😬👧 Checkpoint ./styles.css:69468852/90 ./script.js:69468852/204 ./default/colour.js:69468852/631 ./examples/index.html:69468852/13

--- a/examples/index.html
+++ b/examples/index.html
@@ -103,6 +103,6 @@
   </body>
   
   <!-- link to script file -->
-  <script src="/default/colour.js"></script>
+  <script src="/default/default.js"></script>
   <script src="/script.js"></script>
 </html>
