🐋🚐 Checkpoint ./default/default.css:69468852/8622 ./styles.css:69468852/31420 ./default/reset.css:69468852/2675 ./index.html:69468852/643 ./examples/index.html:69468852/268

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Code Playground</title>
     
     <!-- links to your css files -->
+    <link rel="stylesheet" href="/default/reset.css" />
     <link rel="stylesheet" href="/default/default.css" />
     <link rel="stylesheet" href="/styles.css" />
   </head>
@@ -30,9 +31,10 @@
     <!-- main playground -->
     <main>
       <section>
-        <div>
-          lkhlkhlgkjf
+        <div class="box">
+          <p>Style this box using code.</p>
         </div>
+        you can duplicate the box by copy and pasting the 
       </section>
     </main>
   </body>
