--- a/examples/index.html
+++ b/examples/index.html
@@ -5,6 +5,7 @@
     <title>Code Playground</title>
     
     <!-- links to your css files -->
+    <link rel="stylesheet" href="/default/reset.css" />
     <link rel="stylesheet" href="/default/default.css" />
     <link rel="stylesheet" href="/styles.css" />
   </head>
