--- a/examples/index.html
+++ b/examples/index.html
@@ -18,19 +18,20 @@
       </div>
 
       <div class="message">
-        <a href="https://www.google.com/" target="_blank">Simple tricks</a>
+        <a href="https://www.figma.com/proto/EZ1ZoxtpDCS8gD5iyTtHZm/RMIT-Fashion-Communications_2024-08-07?page-id=11714%3A953&node-id=11772-4149&viewport=1140%2C478%2C0.1&t=fL1mRzrHn4g7xOLe-1&scaling=contain&content-scaling=fixed" target="_blank">Simple tricks</a>
       </div>
 
       <nav>
         <ul>
-          <li><a href="#exercise-1">Hover states</a></li>
-          <li><a href="#exercise-2">Image/video</a></li>
-          <li><a href="#exercise-3">Rotate (css transforms)</a></li>
-          <li><a href="#exercise-4">Round corners</a></li>
-          <li><a href="#exercise-5">Keyframe animations</a></li>
+          <li><a href="#exercise-1">Hover state</a></li>
+          <li><a href="#exercise-2">Transform filter — blur</a></li>
+          <li><a href="#exercise-3">Round corners</a></li>
+          <li><a href="#exercise-4">Transform rotate</a></li>
+          <li><a href="#exercise-5">Click to change colour</a></li>
           <li><a href="#exercise-6">Custom cursors</a></li>
-          <li><a href="#exercise-7">Draggable elements</a></li>
-          <li><a href="#exercise-8">Media queries</a></li>
+          <li><a href="#exercise-7">Drag me</a></li>
+          <li><a href="#exercise-8">Media query</a></li>
+          <li><a href="#exercise-9">Image/video</a></li>
         </ul>
       </nav>
     </header>
@@ -84,14 +85,14 @@
       <section id="exercise-7">
         <div class="container">
           <div class="box draggable">
-            <p>Drag me</p>
+            <p>Drag me* tbc</p>
           </div>
         </div>
       </section>
       <section id="exercise-8">
         <div class="container">
           <div class="box">
-            <code>@media (max-width: 888px) { /* insert style */ }</code>
+            Media query
           </div>
         </div>
       </section>
