🍴🚕 Checkpoint ./examples/index.html:69468852/16

--- a/examples/index.html
+++ b/examples/index.html
@@ -29,7 +29,7 @@
           <li><a href="#exercise-4">Transform rotate</a></li>
           <li><a href="#exercise-5">Click to change colour</a></li>
           <li><a href="#exercise-6">Custom cursors</a></li>
-          <li><a href="#exercise-7">Drag me</a></li>
+          <li><a href="#exercise-7">Drag me* (tbc)</a></li>
           <li><a href="#exercise-8">Media query</a></li>
           <li><a href="#exercise-9">Image/video</a></li>
         </ul>
@@ -85,7 +85,7 @@
       <section id="exercise-7">
         <div class="container">
           <div class="box draggable">
-            <p>Drag me* tbc</p>
+            <p>Drag me</p>
           </div>
         </div>
       </section>
