--- a/examples/index.html
+++ b/examples/index.html
@@ -84,8 +84,8 @@
       </section>
       <section id="exercise-7">
         <div class="container">
-          <div class="box draggable">
-            <p>Drag me</p>
+          <div class="box">
+            <p>Hover state — scale</p>
           </div>
         </div>
       </section>
