🐣🛥 Checkpoint ./index.html:69468852/2846

--- a/index.html
+++ b/index.html
@@ -37,22 +37,7 @@
       <!-- duplicate the box by copy and pasting the 'section' element with the 'box' class below -->
       <section>
         <div class="box">
-          <p>Style this box using code</p>
-        </div>
-      </section>
-      <section>
-        <div class="box">
-          <p>Style this box using code</p>
-        </div>
-      </section>
-      <section>
-        <div class="box">
-          <p>Style this box using code</p>
-        </div>
-      </section>
-      <section>
-        <div class="box">
-          <p>Style this box using code</p>
+          <p>You can change this text</p>
         </div>
       </section>
     </main>
