🎊🤑 Checkpoint ./styles.css:69468852/172 ./examples/index.html:69468852/33 ./default/default.css:69468852/37

--- a/examples/index.html
+++ b/examples/index.html
@@ -29,7 +29,7 @@
           <li><a href="#exercise-4">Transform rotate</a></li>
           <li><a href="#exercise-5">Click to change colour</a></li>
           <li><a href="#exercise-6">Custom cursors</a></li>
-          <li><a href="#exercise-7">Drag me* (tbc)</a></li>
+          <li><a href="#exercise-7">Hover state — scale</a></li>
           <li><a href="#exercise-8">Media query</a></li>
           <li><a href="#exercise-9">Image/video</a></li>
         </ul>
