🎖🐷 Checkpoint ./examples/index.html:69468852/1689 ./default/default.js:69468852/832 ./default/default.css:69468852/43

--- a/examples/index.html
+++ b/examples/index.html
@@ -23,15 +23,15 @@
 
       <nav>
         <ul>
-          <li><a href="#example-1">Hover state</a></li>
-          <li><a href="#example-2">Transform filter — blur</a></li>
-          <li><a href="#example-3">Round corners</a></li>
-          <li><a href="#example-4">Transform rotate</a></li>
-          <li><a href="#example-5">Click to change colour</a></li>
-          <li><a href="#example-6">Custom cursors</a></li>
-          <li><a href="#example-7">Hover state — scale</a></li>
-          <li><a href="#example-8">Media query</a></li>
-          <li><a href="#example-9">Image/video</a></li>
+          <li data-target="#example-1"><a href="#example-1">Hover state</a></li>
+          <li data-target="#example-2"><a href="#example-2">Transform filter — blur</a></li>
+          <li data-target="#example-3"><a href="#example-3">Round corners</a></li>
+          <li data-target="#example-4"><a href="#example-4">Transform rotate</a></li>
+          <li data-target="#example-5"><a href="#example-5">Click to change colour</a></li>
+          <li data-target="#example-6"><a href="#example-6">Custom cursors</a></li>
+          <li data-target="#example-7"><a href="#example-7">Hover state — scale</a></li>
+          <li data-target="#example-8"><a href="#example-8">Media query</a></li>
+          <li data-target="#example-9"><a href="#example-9">Image/video</a></li>
         </ul>
       </nav>
     </header>
