🚦💡 Checkpoint ./default/default.css:69468852/243 ./index.html:69468852/41 ./examples/index.html:69468852/12

--- a/examples/index.html
+++ b/examples/index.html
@@ -40,14 +40,14 @@
     <main>
       <section id="example-1">
         <div class="container">
-          <div class="box fast">
+          <div class="box">
             <p>Hover state</p>
           </div>
         </div>
       </section>
       <section id="example-2">
         <div class="container">
-          <div class="box fast">
+          <div class="box">
             <p>Transform</p>
             <p>Filter — blur</p>
           </div>
