--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <!-- duplicate the box by copy and pasting the 'section' element with the 'box' class below -->
       <section>
         <div class="box">
-          <p>You can change this text</p>
+          <p>Try editing this text</p>
         </div>
       </section>
     </main>
