🏄🍝 Checkpoint ./index.html:69468852/295 ./examples/index.html:69468852/295

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="message">
         <p>
           Try out some simple tricks from the
-          <a href="https://www.figma.com/proto/EZ1ZoxtpDCS8gD5iyTtHZm/RMIT-Fashion-Communications_2024-08-07?page-id=11714%3A953&node-id=11772-4149&viewport=1140%2C478%2C0.1&t=fL1mRzrHn4g7xOLe-1&scaling=contain&content-scaling=fixed" target="_blank">presentation</a>.
+          <a href="https://drive.google.com/file/d/1SbQOFIytP_2tBK9ZcYgn7Y-G9Ir7SuxJ/view?usp=sharing" target="_blank">presentation</a>.
           Don't be afraid to break the code.
         </p>
       </div>
