--- a/examples/index.html
+++ b/examples/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <div class="message">
-        <a href="https://www.figma.com/proto/EZ1ZoxtpDCS8gD5iyTtHZm/RMIT-Fashion-Communications_2024-08-07?page-id=11714%3A953&node-id=11772-4149&viewport=1140%2C478%2C0.1&t=fL1mRzrHn4g7xOLe-1&scaling=contain&content-scaling=fixed" target="_blank">Simple tricks</a>
+        <a href="https://drive.google.com/file/d/1SbQOFIytP_2tBK9ZcYgn7Y-G9Ir7SuxJ/view?usp=sharing" target="_blank">Simple tricks</a>
       </div>
 
       <nav>
