💼🐪 Checkpoint ./examples/index.html:69468852/210 ./index.html:69468852/210

--- a/examples/index.html
+++ b/examples/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <div class="message">
-        <a href="https://drive.google.com/file/d/1SbQOFIytP_2tBK9ZcYgn7Y-G9Ir7SuxJ/view?usp=sharing" target="_blank">Simple tricks</a>
+        <a href="https://www.figma.com/proto/g0d7e7801BO5cxCvqo2WXu/RMIT-Fashion-Communications_2025-03-27?node-id=15787-612&t=uHNwoFoODodzlQdj-1" target="_blank">Simple tricks</a>
       </div>
 
       <nav>
