--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="message">
         <p>
           Try out some simple tricks from the
-          <a href="https://drive.google.com/file/d/1SbQOFIytP_2tBK9ZcYgn7Y-G9Ir7SuxJ/view?usp=sharing" target="_blank">presentation</a>.
+          <a href="https://www.figma.com/proto/g0d7e7801BO5cxCvqo2WXu/RMIT-Fashion-Communications_2025-03-27?node-id=15787-612&t=uHNwoFoODodzlQdj-1" target="_blank">presentation</a>.
           Don't be afraid to break the code.
         </p>
       </div>
