--- a/index.html
+++ b/index.html
@@ -1,48 +1,51 @@
 <!-- default doctype and meta info dw about this stuff -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Code Playground</title>
+   <head>
+      <title>Code Playground</title>
 
-    <!-- links to your css files -->
-    <link rel="stylesheet" href="/default/reset.css" />
-    <link rel="stylesheet" href="/default/default.css" />
-    <link rel="stylesheet" href="/styles.css" />
-  </head>
+      <!-- links to your css files -->
+      <link rel="stylesheet" href="default/reset.css" />
+      <link rel="stylesheet" href="default/default.css" />
+      <link rel="stylesheet" href="styles.css" />
+   </head>
 
-  <!-- code playground starts here -->
-  <body>
-    <header>
-      <div class="title">
-        <a href="/">Code Playground</a>
-      </div>
+   <!-- code playground starts here -->
+   <body>
+      <header>
+         <div class="title">
+            <a href="/">Code Playground</a>
+         </div>
 
-      <div class="message">
-        <p>
-          Try out some simple tricks from the
-          <a href="https://www.figma.com/proto/g0d7e7801BO5cxCvqo2WXu/RMIT-Fashion-Communications_2025-03-27?node-id=15787-612&t=uHNwoFoODodzlQdj-1" target="_blank">presentation</a>.
-          Don't be afraid to break the code.
-        </p>
-      </div>
+         <div class="message">
+            <p>
+               Try out some simple tricks from the
+               <a
+                  href="https://www.figma.com/proto/g0d7e7801BO5cxCvqo2WXu/RMIT-Fashion-Communications_2025-03-27?node-id=15787-612&t=uHNwoFoODodzlQdj-1"
+                  target="_blank"
+                  >presentation</a
+               >. Don't be afraid to break the code.
+            </p>
+         </div>
 
-      <nav>
-        <ul>
-          <li><a href="examples">Examples</a></li>
-        </ul>
-      </nav>
-    </header>
+         <nav>
+            <ul>
+               <li><a href="examples">Examples</a></li>
+            </ul>
+         </nav>
+      </header>
 
-    <!-- main playground -->
-    <main>
-      <!-- duplicate the box by copy and pasting the 'section' element with the 'box' class below -->
-      <section>
-        <div class="box">
-          <p>Try editing this text</p>
-        </div>
-      </section>
-    </main>
-  </body>
+      <!-- main playground -->
+      <main>
+         <!-- duplicate the box by copy and pasting the 'section' element with the 'box' class below -->
+         <section>
+            <div class="box">
+               <p>Try editing this text</p>
+            </div>
+         </section>
+      </main>
+   </body>
 
-  <!-- link to script file -->
-  <script src="/script.js"></script>
+   <!-- link to script file -->
+   <script src="script.js"></script>
 </html>
