--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
       <title>Code Playground</title>
 
       <!-- links to your css files -->
-      <link rel="stylesheet" href="default/reset.css" />
-      <link rel="stylesheet" href="default/default.css" />
-      <link rel="stylesheet" href="styles.css" />
+      <link rel="stylesheet" href="code-playground/default/reset.css" />
+      <link rel="stylesheet" href="code-playground/default/default.css" />
+      <link rel="stylesheet" href="code-playground/styles.css" />
    </head>
 
    <!-- code playground starts here -->
@@ -47,5 +47,5 @@
    </body>
 
    <!-- link to script file -->
-   <script src="script.js"></script>
+   <script src="code-playground/script.js"></script>
 </html>
