--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
       <title>Code Playground</title>
 
       <!-- links to your css files -->
-      <link rel="stylesheet" href="/code-playground/default/reset.css" />
-      <link rel="stylesheet" href="/code-playground/default/default.css" />
-      <link rel="stylesheet" href="/code-playground/styles.css" />
+      <link rel="stylesheet" href="./code-playground/default/reset.css?=v1.0" />
+      <link
+         rel="stylesheet"
+         href="./code-playground/default/default.css?=v1.0"
+      />
+      <link rel="stylesheet" href="./code-playground/styles.css?=v1.0" />
    </head>
 
    <!-- code playground starts here -->
    <body>
       <header>
          <div class="title">
-            <a href="/code-playground">Code Playground</a>
+            <a href="./code-playground">Code Playground</a>
          </div>
 
          <div class="message">
@@ -30,7 +33,7 @@
 
          <nav>
             <ul>
-               <li><a href="/code-playground/examples">Examples</a></li>
+               <li><a href="./code-playground/examples">Examples</a></li>
             </ul>
          </nav>
       </header>
@@ -47,5 +50,5 @@
    </body>
 
    <!-- link to script file -->
-   <script src="/code-playground/script.js"></script>
+   <script src="./code-playground/script.js?=v1.0"></script>
 </html>
