--- a/examples/index.html
+++ b/examples/index.html
@@ -5,16 +5,16 @@
       <title>Code Playground</title>
 
       <!-- links to your css files -->
-      <link rel="stylesheet" href="/code-playground/default/reset.css" />
-      <link rel="stylesheet" href="/code-playground/default/default.css" />
-      <link rel="stylesheet" href="/code-playground/styles.css" />
+      <link rel="stylesheet" href="../default/reset.css" />
+      <link rel="stylesheet" href="../default/default.css" />
+      <link rel="stylesheet" href="../styles.css" />
    </head>
 
    <!-- code playground starts here -->
    <body>
       <header>
          <div class="title">
-            <a href="/code-playground">Code Playground</a>
+            <a href="../">Code Playground</a>
          </div>
 
          <div class="message">
@@ -128,6 +128,6 @@
    </body>
 
    <!-- link to script file -->
-   <script src="/code-playground/default/default.js"></script>
-   <script src="/code-playground/script.js"></script>
+   <script src="../default/default.js"></script>
+   <script src="../script.js"></script>
 </html>
