--- a/index.html
+++ b/index.html
@@ -5,19 +5,16 @@
       <title>Code Playground</title>
 
       <!-- links to your css files -->
-      <link rel="stylesheet" href="./code-playground/default/reset.css?=v1.0" />
-      <link
-         rel="stylesheet"
-         href="./code-playground/default/default.css?=v1.0"
-      />
-      <link rel="stylesheet" href="./code-playground/styles.css?=v1.0" />
+      <link rel="stylesheet" href="./default/reset.css?=v1.0" />
+      <link rel="stylesheet" href="./default/default.css?=v1.0" />
+      <link rel="stylesheet" href="./styles.css?=v1.0" />
    </head>
 
    <!-- code playground starts here -->
    <body>
       <header>
          <div class="title">
-            <a href="./code-playground">Code Playground</a>
+            <a href="./">Code Playground</a>
          </div>
 
          <div class="message">
@@ -33,7 +30,7 @@
 
          <nav>
             <ul>
-               <li><a href="./code-playground/examples">Examples</a></li>
+               <li><a href="./examples">Examples</a></li>
             </ul>
          </nav>
       </header>
@@ -50,5 +47,5 @@
    </body>
 
    <!-- link to script file -->
-   <script src="./code-playground/script.js?=v1.0"></script>
+   <script src="./script.js?=v1.0"></script>
 </html>
