--- a/examples/index.html
+++ b/examples/index.html
@@ -19,7 +19,7 @@
 
          <div class="message">
             <a
-               href="https://www.figma.com/proto/g0d7e7801BO5cxCvqo2WXu/RMIT-Fashion-Communications_2025-03-27?node-id=15787-612&t=uHNwoFoODodzlQdj-1"
+               href="https://www.figma.com/proto/g0d7e7801BO5cxCvqo2WXu/RMIT-Fashion-Communications_2025-03-27?node-id=15797-93&t=zZgU8Jv4haq3VpWS-1"
                target="_blank"
                >Simple tricks</a
             >
