--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>
                Try out some simple tricks from the
                <a
-                  href="https://www.figma.com/proto/g0d7e7801BO5cxCvqo2WXu/RMIT-Fashion-Communications_2025-03-27?node-id=15787-612&t=uHNwoFoODodzlQdj-1"
+                  href="https://www.figma.com/proto/g0d7e7801BO5cxCvqo2WXu/RMIT-Fashion-Communications_2025-03-27?node-id=15797-93&t=zZgU8Jv4haq3VpWS-1"
                   target="_blank"
                   >presentation</a
                >. Don't be afraid to break the code.
